# qmap

./: .gitignore  3d.c  3d.h  CMakeLists.txt  Makefile  bsp.c  bspfile.h  cam.c  cam.h  clippoly.c  clock.c  cmdlib.h  embuild.sh  getpak.py  main.c  mode.c  mode.h  poly.c  readbsp.c  render.c  s.h  surface.c  surface.h  text.h  tm_c.c  tmap3d.c  watcom.Makefile
resources/: index.html
